--- a/client/views/partials/reports/revenueByVehicles.html
+++ b/client/views/partials/reports/revenueByVehicles.html
@@ -177,7 +177,7 @@
                         {{ revenueListByRegNo.totalExpense}}
                     </td>
 
-                    <td data-title="'Total Revenue'" sortable="'totalRevenue'" class="clickable-item col-sm-2">
+                    <td data-title="'Net Revenue'" sortable="'totalRevenue'" class="clickable-item col-sm-2">
                         {{ revenueListByRegNo.totalRevenue}}
                     </td>
                 </tr>
