--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -73,7 +73,7 @@
                             <label>
                                 <input type="checkbox" ng-model="driver.isActive">
                                 <span class="cr"><i class="cr-icon fa fa-check"></i></span>
-                                Driver Status
+                                Active
                             </label>
                         </div>
                     </div>
