--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -4,6 +4,7 @@
         <div class="col-sm-3 pall-zero"><h3>Driver Details</h3></div>
         <div class="col-xs-8 col-xs-push-1 pall-zero">
             <div class="col-sm-8">
+                <form>
                 <div class="input-group stylish-input-group">
                     <input type="text" ng-model="driver2"  class="form-control" placeholder="Search">
                     <span class="input-group-addon">
@@ -12,6 +13,7 @@
                         </button>
                     </span>
                 </div>
+                </form>
             </div>
         <div class="col-sm-4 pall-zero pos-relative">
             <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
