--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -3,6 +3,7 @@
         <div class="col-sm-3 pall-zero"><h3>Expenses</h3></div>
         <div class="col-xs-8 col-xs-push-1 pall-zero">
             <div class="col-sm-8">
+                <form>
                 <div class="input-group stylish-input-group">
                     <input type="text" class="form-control" ng-model="truckNumber1" placeholder="Search">
                     <span class="input-group-addon">
@@ -11,6 +12,7 @@
                     </button>
                 </span>
                 </div>
+                </form>
             </div>
             <div class="col-sm-4 pall-zero pos-relative">
                 <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
