--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -4,14 +4,16 @@
         <div class="col-sm-3 pall-zero"><h3>Trucks</h3></div>
         <div class="col-xs-8 col-xs-push-1 pall-zero">
             <div class="col-sm-8">
+                <form>
                 <div class="input-group stylish-input-group">
                     <input type="text" ng-model="truckName1" class="form-control" placeholder="Search by truck number">
                     <span class="input-group-addon">
-                        <button type="button" ng-click=searchByTruckName(truckName1);>
+                        <button type="submit" ng-click="searchByTruckName(truckName1);">
                            <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
                 </div>
+                </form>
             </div>
             <div class="col-sm-4 pall-zero pos-relative">
                 <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
