--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -51,14 +51,12 @@
             <div class="col-xs-12 col-sm-6 mt-10">
                 <div class="form-group col-xs-12">
 
-                    <div class="col-xs-12">
                         <date-picker id="licenseValidity" ng-model="driver.licenseValidity"
                                      placeholder="'License Validity'" class="'custom-form-control'"></date-picker>
-                    </div>
                 </div>
 
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 styling-input-list">
+                    <div class="styling-input-list">
                         <input ng-model="driver.salary" type="number" class="form-control custom-form-control"
                                id="salary">
                         <label class="focus-effect-for-input" aria-hidden="true">Salary</label>
