--- a/client/views/index.html
+++ b/client/views/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="js/lib/bundles/ng-table.css">
     <link rel="stylesheet" href="components/sweetalert2/dist/sweetalert2.min.css">
     <link rel="stylesheet" href=" components/ng-img-crop/compile/unminified/ng-img-crop.css">
+    <link rel="stylesheet" href="components/angular-ui-select/dist/select.min.css">
+    <link rel="stylesheet" type="text/css" href="css/select2.css">
 </head>
 
 <body ng-app="EasyGaadi" ng-cloak>
@@ -123,6 +125,8 @@
 <script type="text/javascript" src="components/ng-file-upload/ng-file-upload.min.js"></script>
 <script type="text/javascript" src="components/ng-file-upload/ng-file-upload-shim.min.js"></script>
 <script type="text/javascript" src="/components/ng-img-crop/compile/unminified/ng-img-crop.js"></script>
+<script src="components/angular-ui-select/dist/select.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
 <!--app-->
 <script src="js/app.js"></script>
 
