--- a/client/views/partials/reports/revenueByVehicles.html
+++ b/client/views/partials/reports/revenueByVehicles.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="vehicleRevenue();getAllTrucks();">
+<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="vehicleRevenue();getAllTrucks();erpDashboard();">
     <div class="col-sm-3 col-xs-12">
         <div class="reports-panel activated" ui-sref="reports">
             <div class="reports-image">
