--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -28,51 +28,62 @@
             </div>
 
             <div class="form-group col-xs-12 ">
-                <div class="col-xs-12">
-                    <input id="city" type="text" ng-model="driverName"
-                           uib-typeahead="driver.fullName for driver in drivers | filter:$viewValue"
-                           class="form-control custom-form-control" typeahead-min-length="1"
-                           typeahead-on-select="selectDriverId($item)" typeahead-select-on-exact="true"                                                 typeahead-no-results="noDriver" autocomplete="false" placeholder="Assign Driver">
-                        <div ng-show="noDriver">
-                            <i class="glyphicon glyphicon-remove red"></i>
-                            <span class="red"> No Results Found </span>
-                        </div>
-                </div>
 
+                <!--<div class="col-xs-12 select-box">-->
+
+                    <!--<ui-select ng-model="driverName" theme="select2"-->
+                               <!--style="min-width: 390px;"-->
+                               <!--title="Choose a person" append-to-body="true">-->
+                        <!--<ui-select-match placeholder="Select a Driver" class="form-control custom-form-control">-->
+                            <!--{{$select.selected.fullName}}-->
+                        <!--</ui-select-match>-->
+                        <!--<ui-select-choices-->
+                                <!--repeat="driver in drivers | propsFilter: {fullName: $select.search}">-->
+                            <!--&lt;!&ndash;<span ng-click="selectDriverId($index);"></span>&ndash;&gt;-->
+                            <!--<div ng-bind-html="driver.fullName | highlight: $select.search"></div>-->
+                        <!--</ui-select-choices>-->
+                    <!--</ui-select>-->
+
+                <!--</div>-->
+
+
+                <div class="col-xs-12">
+                <input id="city" type="text" ng-model="driverName"
+                uib-typeahead="driver.fullName for driver in drivers | filter:$viewValue"
+                class="form-control custom-form-control" typeahead-min-length="1"
+                typeahead-on-select="selectDriverId($item)" typeahead-select-on-exact="true"
+                typeahead-no-results="noDriver" autocomplete="false" placeholder="Assign Driver">
+                <div ng-show="noDriver">
+                <i class="glyphicon glyphicon-remove red"></i>
+                <span class="red"> No Results Found </span>
+                </div>
+                </div>
             </div>
 
         </div>
+
         <div class="col-sm-6 col-xs-12 mt-10">
+
             <div class="form-group col-xs-12">
-                <div class="col-xs-12">
-                    <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"
-                                 placeholder="'Fitness Due Expiry Date*'" class="'custom-form-control'"></date-picker>
-                </div>
+                <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"
+                             placeholder="'Fitness Due Expiry Date*'" class="'custom-form-control'"></date-picker>
             </div>
             <div class="form-group col-xs-12">
-                <div class="col-xs-12">
-                    <date-picker id="permitExpiry" ng-model="truck.permitExpiry"
-                                 placeholder="'Permit Due Expiry Date*'" class="'custom-form-control'"></date-picker>
-                </div>
+                <date-picker id="permitExpiry" ng-model="truck.permitExpiry"
+                             placeholder="'Permit Due Expiry Date*'" class="'custom-form-control'"></date-picker>
             </div>
             <div class="form-group col-xs-12">
 
-                <div class="col-xs-12">
-                    <date-picker id="insuranceExpiry" ng-model="truck.insuranceExpiry"
-                                 placeholder="'Insurance Due Expiry Date*'" class="'custom-form-control'"></date-picker>
-                </div>
+                <date-picker id="insuranceExpiry" ng-model="truck.insuranceExpiry"
+                             placeholder="'Insurance Due Expiry Date*'" class="'custom-form-control'"></date-picker>
             </div>
             <div class="form-group col-xs-12">
-                <div class="col-xs-12">
-                    <date-picker id="pollutionExpiry" ng-model="truck.pollutionExpiry"
-                                 placeholder="'Pollution Due Expiry Date*'" class="'custom-form-control'"></date-picker>
-                </div>
+                <date-picker id="pollutionExpiry" ng-model="truck.pollutionExpiry"
+                             placeholder="'Pollution Due Expiry Date*'" class="'custom-form-control'"></date-picker>
             </div>
             <div class="form-group col-xs-12">
-                <div class="col-xs-12">
-                    <date-picker id="taxDueDate" ng-model="truck.taxDueDate"
-                                 placeholder="'Tax Due Expiry Date*'" class="'custom-form-control'"></date-picker>
-                </div>
+                <date-picker id="taxDueDate" ng-model="truck.taxDueDate"
+                             placeholder="'Tax Due Expiry Date*'" class="'custom-form-control'"></date-picker>
             </div>
         </div>
         <div class="clearfix"></div>
@@ -92,7 +103,6 @@
             </div>
         </div>
     </div>
-
 
 
 </div>
