Updated API User Wise

--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -8,7 +8,7 @@
                 <div class="input-group stylish-input-group">
                     <input type="text" ng-model="driver2"  class="form-control" placeholder="Search">
                     <span class="input-group-addon">
-                        <button type="button" ng-click="searchByDriverName(driver2)">
+                        <button type="submit" ng-click="searchByDriverName(driver2)">
                            <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
