--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -7,7 +7,7 @@
                 <div class="input-group stylish-input-group">
                     <input type="text" class="form-control" ng-model="truckNumber1" placeholder="Search">
                     <span class="input-group-addon">
-                    <button type="button" ng-click="searchByVechicleNumber(truckNumber1);">
+                    <button type="submit" ng-click="searchByVechicleNumber(truckNumber1);">
                             <i class="fa fa-search sear" aria-hidden="true"></i>
                     </button>
                 </span>
