--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -7,7 +7,7 @@
             <div class="input-group stylish-input-group">
                 <input type="text"  ng-model="partyName1"class="form-control" placeholder="Search">
                 <span class="input-group-addon">
-                        <button type="button" ng-click="searchByPartyName(partyName1);">
+                        <button type="submit" ng-click="searchByPartyName(partyName1);">
                               <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
