--- a/client/views/partials/payments/paymentsEdit.html
+++ b/client/views/partials/payments/paymentsEdit.html
@@ -19,7 +19,7 @@
                                typeahead-select-on-exact="true"
                                typeahead-no-results="noParty" autocomplete="false" placeholder="Party Name*">
 
-                        <div ng-show="noParties">
+                        <div ng-show="noParty">
                             <i class="glyphicon glyphicon-remove red"></i>
                             <span class="red"> No Results Found </span>
                         </div>
