--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -9,7 +9,7 @@
                     <div class="input-group stylish-input-group">
                         <input type="text" class="form-control" ng-model="truckNumber1"  placeholder="Search">
                         <span class="input-group-addon">
-                        <button type="button" ng-click="searchByVechicleNumber(truckNumber1);">
+                        <button type="submit" ng-click="searchByVechicleNumber(truckNumber1);">
                                 <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
@@ -20,7 +20,7 @@
                     <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
                     <select class="form-control" ng-model="truckNumber" ng-change="searchByVechicleNumber(truckNumber);">
                         <option value="" selected>All Vehicles</option>
-                        <option ng-repeat="truck in trucksList">{{truck.registrationNo}}</option>
+                        <option ng-repeat="truck in trucksList" value="{{truck._id}}">{{truck.registrationNo}}</option>
                     </select>
                 </div>
                 </div>
