--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -4,7 +4,7 @@
         <div class="col-sm-6 col-xs-12 mt-10">
             <div class="form-group col-xs-12">
                 <div class="col-xs-12 styling-input-list">
-                    <input type="text" class="form-control custom-form-control" ng-model="truck.registrationNo"/>
+                    <input type="text" class="form-control custom-form-control" ng-readonly="type==='group'" ng-model="truck.registrationNo"/>
                     <label class="focus-effect-for-input" aria-hidden="true">Truck Number</label>
                 </div>
             </div>
