--- a/client/views/partials/userProfile/addingGroup.html
+++ b/client/views/partials/userProfile/addingGroup.html
@@ -5,8 +5,8 @@
                 <div class="top-block">
                     <ul class="list-inline">
                         <li><a href="#" ui-sref="myProfile">My Profile</a></li>
-                        <li><a href="#" ui-sref="myGroup">My Group</a></li>
-                        <li><a href="#" ui-sref="addGroup" class="activeProfileTab">Add Group</a></li>
+                        <li><a href="#" ui-sref="myGroup" ng-show="type==='account'">My Group</a></li>
+                        <li><a href="#" ui-sref="addGroup" ng-show="type==='account'"  class="activeProfileTab">Add Group</a></li>
                     </ul>
                 </div>
 
