--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -5,14 +5,15 @@
         <div class="col-xs-8 col-xs-push-1 pall-zero">
             <div class="col-sm-8">
                 <form>
-                <div class="input-group stylish-input-group">
-                    <input type="text" ng-model="truckName1" class="form-control" placeholder="Search by truck number">
-                    <span class="input-group-addon">
+                    <div class="input-group stylish-input-group">
+                        <input type="text" ng-model="truckName1" class="form-control"
+                               placeholder="Search by truck number">
+                        <span class="input-group-addon">
                         <button type="submit" ng-click="searchByTruckName(truckName1);">
                            <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
-                </div>
+                    </div>
                 </form>
             </div>
             <div class="col-sm-4 pall-zero pos-relative">
@@ -81,8 +82,9 @@
     </table>
     <div class="add-image pull-right" ng-show="type==='account'">
         <figure>
-            <a href="#" ng-click="goToEditTruckPage()"><img src="images/Add_Truck.png" alt="Add Truck"
-                                                            title="Add Truck"></a>
+            <a href="#" ng-click="goToEditTruckPage()">
+                <img src="images/Add_Truck.png" alt="Add Truck"
+                     title="Add Truck"></a>
         </figure>
     </div>
 
