--- a/client/views/partials/groups/show-groups.html
+++ b/client/views/partials/groups/show-groups.html
@@ -16,7 +16,7 @@
                         class="clickable-item col-sm-1">{{ groups.attrs.createdByName }}
                     </td>
                     <td data-title="'Action'" class="col-sm-2">
-                        <a href="#" class="btn" ng-click="goToEditGroupPage(groups._id)">
+                        <a href="#" class="btn edit-icon" ng-click="goToEditGroupPage(groups._id)">
                             <span class="glyphicon glyphicon-pencil"></span></a>
                     </td>
                 </tr>
