--- a/client/views/partials/reports/payableByParty.html
+++ b/client/views/partials/reports/payableByParty.html
@@ -116,7 +116,7 @@
                             <date-picker ng-model="filters.toDate" ban-future="'banFutureDate'"
                                          class="'textfield'"></date-picker>
                         </li>
-                        <li class="col-xs-3 pall-zero pos-relative">
+                        <li class="filterToDate pall-zero pos-relative">
                             <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
 
 
