--- a/client/views/partials/payments/paymentsReceived.html
+++ b/client/views/partials/payments/paymentsReceived.html
@@ -29,33 +29,33 @@
             <!--</div>-->
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="paymentParams">
                 <tr ng-repeat="payments in currentPageOfPayments" style="text-align: center;">
-                    <td data-title="'Date'" sortable="'date'" class="clickable-item col-sm-1">{{ payments.date |
+                    <td data-title="'Date'" sortable="'date'" class="clickable-item">{{ payments.date |
                         date:'MM-dd-yyyy'}}
                     </td>
-                    <td data-title="'Party'" sortable="'partyName'" class="clickable-item col-sm-2">{{
+                    <td data-title="'Party'" sortable="'partyName'" class="clickable-item">{{
                         payments.attrs.partyName }}
                     </td>                  
-                    <td data-title="'Amount'" sortable="'amount'" class="clickable-item col-sm-1">{{
+                    <td data-title="'Amount'" sortable="'amount'" class="clickable-item">{{
                         payments.amount }}
                     </td>
-                    <td data-title="'Payment Type'" sortable="'paymentType'" class="clickable-item col-sm-1">{{
+                    <td data-title="'Payment Type'" sortable="'paymentType'" class="clickable-item">{{
                         payments.paymentType }}
                     </td>
-                    <td data-title="'Payment Ref No'" sortable="'paymentRefNo'" class="clickable-item col-sm-2">{{
+                    <td data-title="'Payment Ref No'" sortable="'paymentRefNo'" class="clickable-item">{{
                         payments.paymentRefNo }}
                     </td>
-                    <td data-title="'Description'" sortable="'description'" class="clickable-item col-sm-2">{{
+                    <td data-title="'Description'" sortable="'description'" class="clickable-item">{{
                         payments.description}}
                     </td>
                     <td data-title="'Created By'" sortable="'createdByName'"
-                        class="clickable-item col-sm-1">{{ payments.attrs.createdByName }}
+                        class="clickable-item">{{ payments.attrs.createdByName }}
                     </td>
 
-                    <td data-title="'Action'" class="">
-                        <a href="#" class="btn" ng-click="goToEditPaymentsPage(payments._id)">
+                    <td data-title="'Action'">
+                        <a href="#" class="btn edit-icon" ng-click="goToEditPaymentsPage(payments._id)">
                             <span class="glyphicon glyphicon-pencil"></span></a>
 
-                        <a href="#" class="btn" ng-click="deletePaymentsRecord(payments._id)">
+                        <a href="#" class="btn edit-icon" ng-click="deletePaymentsRecord(payments._id)">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
                     </td>
