--- a/client/views/partials/reports/expiryTrucks.html
+++ b/client/views/partials/reports/expiryTrucks.html
@@ -147,22 +147,22 @@
 
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expiryParams">
                 <tr ng-repeat="expiryList in expiryTrucks" style="text-align: center;">
-                    <td data-title="'Registration No'" sortable="'registrationNo'" class="clickable-item col-sm-2">
+                    <td data-title="'Registration No'" sortable="'registrationNo'" class="clickable-item">
                         {{expiryList.registrationNo }}
                     </td>
-                    <td data-title="'Fitness Expiry'" sortable="'fitnessExpiry'" class="clickable-item col-sm-2">
+                    <td data-title="'Fitness Expiry'" sortable="'fitnessExpiry'" class="clickable-item">
                         {{ expiryList.fitnessExpiry | date:'MM-dd-yyyy'}}
                     </td>
-                    <td data-title="'Permit Expiry'" sortable="'permitExpiry'" class="clickable-item col-sm-2">
+                    <td data-title="'Permit Expiry'" sortable="'permitExpiry'" class="clickable-item">
                         {{ expiryList.permitExpiry | date:'MM-dd-yyyy'}}
                     </td>
-                    <td data-title="'Tax Expiry'" sortable="'taxExpiry'" class="clickable-item col-sm-2">
+                    <td data-title="'Tax Expiry'" sortable="'taxExpiry'" class="clickable-item">
                         {{ expiryList.taxDueDate | date:'MM-dd-yyyy'}}
                     </td>
-                    <td data-title="'Insurance Expiry'" sortable="'insuranceExpiry'" class="clickable-item col-sm-2">
+                    <td data-title="'Insurance Expiry'" sortable="'insuranceExpiry'" class="clickable-item">
                         {{ expiryList.insuranceExpiry | date:'MM-dd-yyyy'}}
                     </td>
-                    <td data-title="'Pollution Expiry'" sortable="'pollutionExpiry'" class="clickable-item col-sm-2">
+                    <td data-title="'Pollution Expiry'" sortable="'pollutionExpiry'" class="clickable-item">
                         {{ expiryList.pollutionExpiry | date:'MM-dd-yyyy'}}
                     </td>
                 </tr>
