--- a/client/views/partials/reports/receivableByParties.html
+++ b/client/views/partials/reports/receivableByParties.html
@@ -114,9 +114,8 @@
                             <date-picker ng-model="filters.toDate" ban-future="'banFutureDate'"
                                          class="'textfield'"></date-picker>
                         </li>
-                        <li class="col-xs-3 pall-zero pos-relative">
+                        <li class="filterToDate pall-zero pos-relative">
                             <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-
 
                             <input type="text" ng-model="filters.partyName"
                                    uib-typeahead="party.name for party in partiesList | filter:$viewValue"
