--- a/client/views/partials/reports/receivableByPartyName.html
+++ b/client/views/partials/reports/receivableByPartyName.html
@@ -106,22 +106,22 @@
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
                 <tr ng-repeat="amountListByPartyId in results" style="text-align: center;">
 
-                    <td data-title="'Date'" sortable="'date'" class="clickable-item col-sm-2">
+                    <td data-title="'Date'" sortable="'date'" class="clickable-item">
                         {{amountListByPartyId.date | date:'dd-MM-yyyy' }}
                     </td>
-                    <td data-title="'Trip Id'" sortable="'tripId'" class="clickable-item col-sm-2">
+                    <td data-title="'Trip Id'" sortable="'tripId'" class="clickable-item">
                         {{ amountListByPartyId.tripId }}
                     </td>
-                    <td data-title="'Registration No'" sortable="'truckName'" class="clickable-item col-sm-2">
+                    <td data-title="'Registration No'" sortable="'truckName'" class="clickable-item">
                         {{ amountListByPartyId.attrs.truckName }}
 
                     </td>
 
-                    <td data-title="'Freight Amount'" sortable="'freightAmount'" class="clickable-item col-sm-2">
+                    <td data-title="'Freight Amount'" sortable="'freightAmount'" class="clickable-item">
                         {{ amountListByPartyId.freightAmount }}
                     </td>
 
-                    <td data-title="'Paid Amount'" sortable="'amount'" class="clickable-item col-sm-2">
+                    <td data-title="'Paid Amount'" sortable="'amount'" class="clickable-item">
                         {{ amountListByPartyId.amount}}
                     </td>
 
