--- a/client/views/partials/reports/revenueByVehicles.html
+++ b/client/views/partials/reports/revenueByVehicles.html
@@ -117,7 +117,7 @@
                             <date-picker ng-model="filters.toDate" ban-future="'banFutureDate'"
                                          class="'textfield'"></date-picker>
                         </li>
-                        <li class="col-xs-3 pall-zero pos-relative">
+                        <li class="filterToDate pall-zero pos-relative">
                             <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
                             <input type="text" ng-model="filters.regNumber"
                                    uib-typeahead="truck.registrationNo for truck in trucksList | filter:$viewValue"
