--- a/client/views/partials/triplane/trip-lane.html
+++ b/client/views/partials/triplane/trip-lane.html
@@ -22,10 +22,10 @@
                         class="clickable-item col-sm-2">{{ trip.attrs.createdByName }}
                     </td>
                     <td data-title="'Action'" class="col-sm-2">
-                        <a href="#" class="btn" ng-click="goToEditTripLanePage(trip._id)">
+                        <a href="#" class="btn edit-icon" ng-click="goToEditTripLanePage(trip._id)">
                             <span class="glyphicon glyphicon-pencil"></span></a>
 
-                        <a href="#" class="btn" ng-click="deleteTripLane(trip._id)">
+                        <a href="#" class="btn edit-icon" ng-click="deleteTripLane(trip._id)">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
                     </td>
