--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -29,49 +29,45 @@
 
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="truckParams">
         <tr ng-repeat="trucks in currentPageOfTrucks" style="text-align: center;">
-            <td data-title="'Reg No'" sortable="'registrationNo'" class="clickable-item col-sm-1">
+            <td data-title="'Reg No'" sortable="'registrationNo'" class="clickable-item">
                 {{trucks.registrationNo}}<br>{{trucks.truckType}}/{{trucks.tonnage}}
             </td>
-            <!--<td data-title="'TruckType'" sortable="'truckType'" class="clickable-item col-sm-1">{{-->
-            <!--trucks.truckType}}-->
-            <!--</td>-->
-            <!--<td data-title="'Tonnage'" sortable="'tonnage'" class="clickable-item col-sm-1">{{-->
-            <!--trucks.tonnage }}-->
-            <!--</td>-->
-            <td data-title="'Permit'" sortable="'permitExpiry'" class="clickable-item col-sm-1">
+
+            <td data-title="'Permit'" sortable="'permitExpiry'" class="clickable-item">
                 <span ng-class="getBackGroundColor(trucks.permitExpiry)">
                     {{trucks.permitExpiry | date:'dd/MM/yyyy'}}</span>
             </td>
-            <td data-title="'Pollution'" sortable="'pollutionExpiry'" class="clickable-item col-sm-1">
+            <td data-title="'Pollution'" sortable="'pollutionExpiry'" class="clickable-item">
                         <span ng-class="getBackGroundColor(trucks.pollutionExpiry)">
                             {{ trucks.pollutionExpiry | date:'dd/MM/yyyy' }}</span>
             </td>
-            <td data-title="'Insurance'" sortable="'insuranceExpiry'" class="clickable-item col-sm-1">
+            <td data-title="'Insurance'" sortable="'insuranceExpiry'" class="clickable-item">
                 <span ng-class="getBackGroundColor(trucks.insuranceExpiry)">
                     {{ trucks.insuranceExpiry | date:'dd/MM/yyyy' }}</span>
             </td>
-            <td data-title="'Fitness'" sortable="'fitnessExpiry'" class="clickable-item col-sm-1">
+            <td data-title="'Fitness'" sortable="'fitnessExpiry'" class="clickable-item">
                 <span ng-class="getBackGroundColor(trucks.fitnessExpiry)">
                     {{trucks.fitnessExpiry | date:'dd/MM/yyyy' }}</span>
             </td>
-            <td data-title="'Tax'" sortable="'taxExpiry'" class="clickable-item col-sm-1">
+            <td data-title="'Tax'" sortable="'taxExpiry'" class="clickable-item">
                 <span ng-class="getBackGroundColor(trucks.taxDueDate)">
                     {{trucks.taxDueDate | date:'dd/MM/yyyy' }}</span>
             </td>
-            <td data-title="'Driver'" sortable="'fullName'" class="clickable-item col-sm-1">
+            <td data-title="'Driver'" sortable="'fullName'" class="clickable-item">
                 <span>{{ trucks.attrs.fullName }}</span>
             </td>
-            <td data-title="'Driver Num'" sortable="'mobile'" class="clickable-item col-sm-1">{{
+            <td data-title="'Driver Num'" sortable="'mobile'" class="clickable-item">{{
                 trucks.attrs.mobile }}
             </td>
             <td data-title="'Created By'" sortable="'createdByName'"
                 class="clickable-item col-sm-1">{{ trucks.attrs.createdByName }}
             </td>
-            <td data-title="'Action'" class="col-sm-2">
-                <a href="#" class="btn"  ng-click="goToEditTruckPage(trucks._id)">
+
+            <td data-title="'Action'">
+                <a href="#" class="btn edit-icon" ng-click="goToEditTruckPage(trucks._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
 
-                <a href="#" class="btn"  ng-show="type==='account'" ng-click="deleteTruck(trucks._id)">
+            <a href="#" class="btn edit-icon" ng-show="type==='account'" ng-click="deleteTruck(trucks._id)">
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
             </td>
