--- a/client/views/partials/userProfile/myGroup.html
+++ b/client/views/partials/userProfile/myGroup.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12" ng-controller="LeftNavCtrl">
+<div class="col-xs-12">
     <div class="col-xs-12">
         <div class="col-xs-12 profile-page">
             <div class="col-xs-11 profile-tabs">
@@ -24,7 +24,7 @@
                                 class="clickable-item col-sm-1">{{ groups.accountId.userName }}
                             </td>
                             <td data-title="'Action'" class="col-sm-2">
-                                <a href="#" class="btn" ng-click="goToEditAccountGroupPage(groups._id)">
+                                <a href="#" class="btn edit-icon" ng-click="goToEditAccountGroupPage(groups._id)">
                                     <span class="glyphicon glyphicon-pencil"></span></a>
                             </td>
                         </tr>
