--- a/client/views/partials/payments/paymentsReceived.html
+++ b/client/views/partials/payments/paymentsReceived.html
@@ -51,11 +51,12 @@
                         class="clickable-item">{{ payments.attrs.createdByName }}
                     </td>
 
-                    <td data-title="'Action'">
-                        <a href="#" class="btn edit-icon" ng-click="goToEditPaymentsPage(payments._id)">
+
+                    <td data-title="'Action'" class="">
+                        <a href="#" ng-show="userType=='account' || userId==payments.createdBy" class="btn" ng-click="goToEditPaymentsPage(payments._id)">
                             <span class="glyphicon glyphicon-pencil"></span></a>
 
-                        <a href="#" class="btn edit-icon" ng-click="deletePaymentsRecord(payments._id)">
+                        <a href="#" ng-show="userType=='account' || userId==payments.createdBy" class="btn" ng-click="deletePaymentsRecord(payments._id)">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
                     </td>
