--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -48,10 +48,11 @@
             <td data-title="'Created By'" sortable="'createdByName'"
                 class="clickable-item">{{ maintanence.attrs.createdByName }}
             </td>
-            <td data-title="'Action'">
-                <a href="#" class="btn edit-icon" ng-click="goToEditExpensePage(maintanence._id)">
+
+            <td data-title="'Action'" class="col-sm-2">
+                <a href="#" ng-show="userType=='account' || userId==maintanence.createdBy" class="btn" ng-click="goToEditExpensePage(maintanence._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
-                <a href="#" class="btn edit-icon" ng-click="deleteExpenseRecord(maintanence._id)">
+                <a href="#" ng-show="userType=='account' || userId==maintanence.createdBy" class="btn" ng-click="deleteExpenseRecord(maintanence._id)">
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
             </td>
