--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -56,10 +56,10 @@
                     class="clickable-item col-sm-1">{{ drivers.attrs.createdByName }}
                 </td>
                 <td data-title="'Action'" class="col-sm-2">
-                    <a href="#" class="btn" ng-click="goToEditDriverPage(drivers._id)">
+                    <a href="#" ng-show="userType=='account' || userId==drivers.createdBy" class="btn" ng-click="goToEditDriverPage(drivers._id)">
                         <span class="glyphicon glyphicon-pencil"></span></a>
 
-                    <a href="#" class="btn" ng-click="deleteDriver(drivers._id)">
+                    <a href="#" ng-show="userType=='account' || userId==drivers.createdBy" class="btn" ng-click="deleteDriver(drivers._id)">
                         <span class="glyphicon glyphicon-remove"></span>
                     </a>
                 </td>
