--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -49,9 +49,9 @@
                 class="clickable-item col-sm-1">{{ maintanence.attrs.createdByName }}
             </td>
             <td data-title="'Action'" class="col-sm-2">
-                <a href="#" class="btn" ng-click="goToEditExpensePage(maintanence._id)">
+                <a href="#" ng-show="userType=='account' || userId==maintanence.createdBy" class="btn" ng-click="goToEditExpensePage(maintanence._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
-                <a href="#" class="btn" ng-click="deleteExpenseRecord(maintanence._id)">
+                <a href="#" ng-show="userType=='account' || userId==maintanence.createdBy" class="btn" ng-click="deleteExpenseRecord(maintanence._id)">
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
             </td>
