--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -50,9 +50,9 @@
                 class="clickable-item col-sm-1">{{ parties.attrs.createdByName }}
             </td>
             <td data-title="'Action'" class="col-sm-2">
-                <a href="#" class="btn" ng-click="goToEditPartyPage(parties._id)">
+                <a href="#" ng-show="userType=='account' || userId==parties.createdBy" class="btn" ng-click="goToEditPartyPage(parties._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
-                <a href="#" class="btn" ng-click="deleteParty(parties._id)">
+                <a href="#" ng-show="userType=='account' || userId==parties.createdBy" class="btn" ng-click="deleteParty(parties._id)">
                     <span class="glyphicon glyphicon-remove"></span></a>
             </td>
         </tr>
