--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -70,7 +70,7 @@
                 <a href="#" class="btn"  ng-click="goToEditTruckPage(trucks._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
 
-                <a href="#" class="btn"  ng-show="type==='account'" ng-click="deleteTruck(trucks._id)">
+                <a href="#" class="btn"  ng-show="userType=='account'" ng-click="deleteTruck(trucks._id)">
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
             </td>
