--- a/client/views/partials/gps/gpsReports.html
+++ b/client/views/partials/gps/gpsReports.html
@@ -39,6 +39,7 @@
                 </ul>
             </div>
             <div class="col-xs-12 mt-25">
+                <a ui-sref="devices" class="btn btn-info pull-right mb-10">Devices</a>
                 <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
                     <tr style="text-align: center;">
                         <td data-title="'Vehicle Num'" sortable="'partyName'" class="clickable-item col-sm-2">
